--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Finder</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="background">
+        <h1 class="title">음식정보 찾기</h1>
+        <div class="search-area" id="searchArea">
+            <form action="" class="search-meal" id="searchMeal">
+                <input type="text" class="meal-input" placeholder="음식명이나 키워드를 입력하세요." id="mealInput">
+                <input type="submit" class="search-sub" id="searchSub" value="🔎">
+            </form>
+            <button class="random-btn" id="randomBtn">❓</button>
+        </div>
+
+    </section>
+    <script src="index.js"></script>
 </body>
 </html>
