--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <title>Meal Finder</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +17,7 @@
             </form>
             <button class="random-btn" id="randomBtn">❓</button>
         </div>
-        <h2 class="keywword" id="keyword"></h2>
+        <h2 class="keyword" id="keyword"></h2>
 
     </section>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
