검색 필터링, 결과화면 구현 (1)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <button class="random-btn" id="randomBtn">❓</button>
         </div>
         <h2 class="keyword" id="keyword"></h2>
-
+        <article class="result-area" id="resultArea">
+            
+        </article>
     </section>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="index.js"></script>
